Define Iterator Benchmark using FFM.